// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots it renders brand color correctly 1`] = `
<button
  class="🅲-btn btn-primary btn-color-success"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders defaults correctly 1`] = `
<button
  class="🅲-btn btn-primary"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders large outline correctly 1`] = `
<button
  class="🅲-btn btn-primary btn-lg"
  type="button"
>
  Componentry
</button>
`;
